<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp" />

            <TextView
                android:id="@+id/rewardedTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rewarded" />

            <Button
                android:id="@+id/testButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/testButton" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp" />

            <TextView
                android:id="@+id/bannerTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/banner" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/adViewBanner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:adSize="BANNER"
                app:adUnitId="ca-app-pub-3940256099942544/6300978111" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp" />

            <TextView
                android:id="@+id/largeBannerTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/largeBanner" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/adViewLargeBanner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:adSize="LARGE_BANNER"
                app:adUnitId="ca-app-pub-3940256099942544/6300978111" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp" />

            <TextView
                android:id="@+id/mediumRectangleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mediumRectangle" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/adViewMediumRectangle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:adSize="MEDIUM_RECTANGLE"
                app:adUnitId="ca-app-pub-3940256099942544/6300978111" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp" />

            <TextView
                android:id="@+id/fullBannerTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fullBanner" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/adViewFullBanner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:adSize="FULL_BANNER"
                app:adUnitId="ca-app-pub-3940256099942544/6300978111" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp" />

            <TextView
                android:id="@+id/leaderboardTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/leaderboard" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/adViewLeaderboard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:adSize="LEADERBOARD"
                app:adUnitId="ca-app-pub-3940256099942544/6300978111" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp" />

            <TextView
                android:id="@+id/smartBannerTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/smartBanner" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/adViewSmartBanner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:adSize="SMART_BANNER"
                app:adUnitId="ca-app-pub-3940256099942544/6300978111" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp" />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>